[ DOC ] add registers 0/1/2/6 table csv
- add register description listing table

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -11,7 +11,7 @@ configurable pull-up/pull-down modes. -->
 ## プロジェクトディレクトリツリー
 ```
 (プロジェクトルート)
-│
+|
 |---doc             （ドキュメントフォルダ）
 |   `---data        （スクリーンショットなど）
 |---mbed            （GUIビルド用pythonソースコードとQt4プロジェクトファイル）
@@ -30,7 +30,7 @@ configurable pull-up/pull-down modes. -->
 - FTDI^[TODO: FTDIへのリンク] のUSBシリアル変換ケーブル^[TODO: TinyI2Cのみ]
   またはmbedコントローラでホストのPCにつなぎます。PCからはただのUSBシリアルポートに見えます。
     - 最大115200ボーのUART通信をサポート
-- 最大４チャネルの I^2^Cチャネルを持ち、それぞれのクロックスピードを独立に変更できます。
+- 最大４チャネルの I^2^Cポートを持ち、それぞれのクロックスピードを独立に変更できます。
 - ８または１６ビット長のSPIポートをひとつ持ち、クロックスピードを変更できます。
 - 最大２つの８ビット汎用IOポート
 <!-- - tinyI2C       <-- root
@@ -160,7 +160,7 @@ $ dist/TinyI2C
 |の仕様<sub>~~をパクっt~~</sub>に**_強く_**インスパイアされています。        |
 +------------------------------------------------------------------------------+
 
-## 基本的な仕様
+## 基本的なプロトコル仕様
 <!-- # Command set and protocol
 - _this command character as well as packet structure is inspired(some copied) from
 NXP Semiconductor's UART-I2C converter/controller, named **SC18IM700**._ -->
@@ -195,7 +195,10 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
       の2文字を引いた長さ)を確認します。
         - 残念ながら文字列がそのコマンドの最低文字列長に満たない場合は **"bad packet"**
           パケットが返却されます。
-
+    - 有効なコマンドパケットと確認できると **`TinyI2C`** モジュールはコマンドを実行し、結果を
+      返却パケットとしてホストに返します。返却パケットはデータを伴う場合は各データバイトを
+      16進文字列に変換し、コンマ区切りにされます。エラーでない返却パケットの終端は常に
+      "ok"という文字列です。
 
 ## I^2^Cバス操作コマンド
 ### `'S'` 0x53 I^2^C-bus START
@@ -248,10 +251,11 @@ Table: 返却パケット
 Table: _8bit_ スレーブアドレス0x80から4バイト読出すコマンドパケット例
 
 `doc/Out/commandSandP_ro.tmd`{.include}
+<!--
 | head | slave address(R\) | data length | tail |
 |:----:|:-----------------:|:-----------:|:----:|
 |  S   |      0x?8 ?1      |   0x?0 ?4   |  P   |
-
+ -->
 <!-- Table: return packet -->
 Table: 返却パケット
 
@@ -307,6 +311,7 @@ Table: I2Cバス変更パケットの例
 
 ## SPIバス操作コマンド
 ### `'E'` 0x45 SPI transfer start
+
 
 Table: minimum plength = 8
 
@@ -400,33 +405,50 @@ Table: multi registers write
 |  W   |     '1'     |     0x?A ?A     |     '0'     |     0x?A ?B     | ... |     '9'     |     0x?A ?D     |  P   | -->
 <!--  -->
 
-| register | name in python | purpose                              |
-|:--------:|:--------------:|:-------------------------------------|
-|    0     |    CHIP_ID     | converter's chip ID                  |
-|    1     |   GPIO0_STAT   | status of GPIO 0                     |
-|    2     |   GPIO1_STAT   | status of GPIO 1                     |
-|    4     |   GPIO1_CONF   | GPIO 0 IO configuration              |
-|    3     |   GPIO0_CONF   | GPIO 1 IO configuration              |
-|    5     |    I2C_CONF    | I^2^C channel 1~4 speed configuration  |
-|    6     |    SPI_CONF    | SPI speed and polarity configuration |
+Table: レジスタのリスト
 
+`doc/Out/register_list.tmd`{.include}
+
+<!--
+| register | name in python | purpose                               |
+|:--------:|:--------------:|:--------------------------------------|
+|    0     |    CHIP_ID     | converter's chip ID                   |
+|    1     |   GPIO0_STAT   | status of GPIO 0                      |
+|    2     |   GPIO1_STAT   | status of GPIO 1                      |
+|    4     |   GPIO1_CONF   | GPIO 0 IO configuration               |
+|    3     |   GPIO0_CONF   | GPIO 1 IO configuration               |
+|    5     |    I2C_CONF    | I^2^C channel 1~4 speed configuration |
+|    6     |    SPI_CONF    | SPI speed and polarity configuration  |
+ -->
+
+Table: レジスタ０
+
+`doc/Out/register0.tmd`{.include}
+<!--
 | register 0  | command | CHIP_ID                    |
 |:-----------:|:-------:|:---------------------------|
 | [7\.\.\.0\] |   R/W   | returns chip ID character: |
-|             |         | '0'- LPC824                |
-|             |         | '1'- LPC1768               |
-|             |         | '2'- LPC11U24 or LPC11U35  |
+|             |         | '0'(`0x30`) - LPC824                |
+|             |         | '1'(`0x31`) - LPC1768               |
+|             |         | '2'(`0x32`) - LPC11U24 or LPC11U35  |
+ -->
+Table: レジスタ１
 
-| register 1  | command | GPIO0_STAT                                                          |
+`doc/Out/register1.tmd`{.include}
+
+<!-- | register 1  | command | GPIO0_STAT                                                          |
 |:-----------:|:-------:|:--------------------------------------------------------------------|
 | [7\.\.\.0\] |    R    | behavior changes depend on corresponding bit of GPIO0_CONF register |
 |             |         | 1: reads output setting                                             |
 |             |         | 0: reads input of the pin                                           |
 |             |    W    | behavior changes depend on corresponding bit of GPIO0_CONF register |
 |             |         | 1: writes data to the pin                                           |
-|             |         | 0: do nothing                                                       |
+|             |         | 0: do nothing                                                       | -->
 
-| register 2  | command | GPIO1_STAT                                                           |
+Table: レジスタ２
+
+`doc/Out/register2.tmd`{.include}
+<!-- | register 2  | command | GPIO1_STAT                                                           |
 |:-----------:|:-------:|:---------------------------------------------------------------------|
 |             |         | **if GPIO1 is not enabled, access to this register will be ignored** |
 | [7\.\.\.0\] |    R    | behavior changes depend on corresponding bit of GPIO1_CONF register  |
@@ -434,7 +456,9 @@ Table: multi registers write
 |             |         | 0: reads input of the pin                                            |
 |             |    W    | behavior changes depend on corresponding bit of GPIO1_CONF register  |
 |             |         | 1: writes data to the pin                                            |
-|             |         | 0: do nothing                                                        |
+|             |         | 0: do nothing                                                        | -->
+
+Table: レジスタ３
 
 `doc/Out/register3.tmd`{.include}
 
@@ -447,6 +471,8 @@ Table: multi registers write
 |             |         | 1: sets the pin to an Output. output level is set by corresponding bit of GPIO0_STAT register |
 |             |         | 0: sets the pin to an Input with internal pull-up connected                                   | -->
 
+Table: レジスタ４
+
 `doc/Out/register4.tmd`{.include}
 
 <!-- | register 4  | command | GPIO1_CONF                                                                                    |
@@ -458,6 +484,8 @@ Table: multi registers write
 |             |    W    | Sets each pin's Input/Output configurations:                                                  |
 |             |         | 1: sets the pin to an Output. output level is set by corresponding bit of GPIO1_STAT register |
 |             |         | 0: sets the pin to an Input with internal pull-up connected                                   | -->
+
+Table: レジスタ５
 
 `doc/Out/register5.tmd`{.include}
 
@@ -484,7 +512,11 @@ Table: multi registers write
 |             |         | 01: I2C4 is set to operate in 200kHz clock                                                                  |
 |             |         | 00: I2C4 is set to operate in 100kHz clock                                                                  | -->
 
-| register 6  | command | SPI_CONF                                  |
+Table: レジスタ６
+
+`doc/Out/register6.tmd`{.include}
+
+<!-- | register 6  | command | SPI_CONF                                  |
 |:-----------:|:-------:|:------------------------------------------|
 |    [7\]     |   R/W   | Not used                                  |
 | [6\.\.\.4\] |         | Read/Write clock configuration of SPI     |
@@ -503,7 +535,7 @@ Table: multi registers write
 |             |         | 11: SPI is set to operate in clock mode 3 |
 |             |         | 10: SPI is set to operate in clock mode 2 |
 |             |         | 01: SPI is set to operate in clock mode 1 |
-|             |         | 00: SPI is set to operate in clock mode 0 |
+|             |         | 00: SPI is set to operate in clock mode 0 | -->
 
 <!--
 ~~~c
