[ DOC ] hide contributor info for now

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -157,7 +157,7 @@ $ dist/TinyI2C
 
 +------------------------------------------------------------------------------+
 |これらのコマンド文字とパケットの構造はNXP社のインタフェースIC **`SC18IM700`** |
-|の仕様<sub>~~をパクっt~~</sub>に**_強く_**インスパイアされています。        |
+|の仕様<sub>~~をパクっt~~</sub>に**_強く_**インスパイアされています。          |
 +------------------------------------------------------------------------------+
 
 ## 基本的なプロトコル仕様
@@ -568,7 +568,7 @@ SPI_CONF = '6',
 "W| '0' 0x_a ?A| '1' 0x_b ?B| ...| P"
 ~~~
 -->
-# Contribution by
+<!-- # Contribution by
 Kazuki Yamamoto ( <k.yamamoto.08136891@gmail.com> )
 
 # License
@@ -577,4 +577,4 @@ Kazuki Yamamoto ( <k.yamamoto.08136891@gmail.com> )
 
 # Author
 
-[K4zuki](https://github.com/K4zuki)
+[K4zuki](https://github.com/K4zuki) -->
