[ DOC ] make-html will have web link footnotes

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -2,12 +2,13 @@
 
 ___TinyI2C___ はmbed^TM^ 互換のマイクロコントローラで小さなUART-I^2^C変換モジュールの
 ハードウェアとソフトウェアを設計するプロジェクトです。**`TinyI2C`** モジュールは
-UART^[https://ja.wikipedia.org/wiki/UART] で送られるコマンドパケットを変換し
+UART^[<https://ja.wikipedia.org/wiki/UART>] で送られるコマンドパケットを変換し
 I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定可能なGPIOの読み書きを行います。
 <!--
 This is a tiny UART-I2C converter software/hardware project using mbed conpatible microcontrollers.
 The module converts UART command packets into I2C/SPI protocol or GPIO to read/write with
 configurable pull-up/pull-down modes. -->
+
 ## プロジェクトディレクトリツリー
 ```
 (プロジェクトルート)
@@ -27,7 +28,7 @@ configurable pull-up/pull-down modes. -->
 - up to 4 channel I2C ports with selectable speed
 - one SPI port with 8/16 bits word, also selectable speed
 - up to 2 x 8bit, General Purpose IO ports -->
-- FTDI^[TODO: FTDIへのリンク] のUSBシリアル変換ケーブル^[TODO: TinyI2Cのみ]
+- FTDI^[<http://www.ftdichip.com/>] のUSBシリアル変換ケーブル^[TODO: TinyI2Cのみ]
   またはmbedコントローラでホストのPCにつなぎます。PCからはただのUSBシリアルポートに見えます。
     - 最大115200ボーのUART通信をサポート
 - 最大４チャネルの I^2^Cポートを持ち、それぞれのクロックスピードを独立に変更できます。
@@ -44,7 +45,7 @@ configurable pull-up/pull-down modes. -->
 以下のソフトウェアをインストールしたコンピュータが必要です。
 条件を満たせばラズパイでも動くと思います：
 
-- Python 2.7^[https://www.python.org/]
+- Python 2.7^[<https://www.python.org/>]
     - Python3系でもおそらく動きますがライブラリ／GUIとも未テストです
 - PySerialライブラリ
     - PIP(Pythonのパッケージインストーラ)で入手できます
@@ -52,7 +53,7 @@ configurable pull-up/pull-down modes. -->
 - ___Windowsのみ___ mbedインタフェース用のドライバ[^mbed_Serial_port_driver] をインストールする必要があります。
 
 <!--  -->
-[^mbed_Serial_port_driver]: http://developer.mbed.org/handbook/Windows-serial-configuration
+[^mbed_Serial_port_driver]: <http://developer.mbed.org/handbook/Windows-serial-configuration>
 
 <!-- # Requirement
 - Python 2.7
