--- a/doc/2.0_PythonAPI.md
+++ b/doc/2.0_PythonAPI.md
@@ -1,39 +1,171 @@
 # Python ライブラリ
 この章では`TinyI2C`をPCなどから利用するためのPython実装を紹介します。
-
 このライブラリには以下のPythonモジュール（ライブラリ）が必要です：
+
 - PySerial
 
+## コンストラクタ
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|class serial2i2c(  port = 'com1',                                              |
+|                   baud = '115200'                                             |
+|                   )                                                           |
+|```                                                                            |
++-------------------------------------------------------------------------------+
+|生データをUART（COMポート）に出力する                                          |
++-------------------------------------------------------------------------------+
+
 ## UART操作API
-```python
-raw_write(data="C4FEE0CA")
-raw_read()
-```
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::raw_write( str data = "C4FEE0CA"                                   |
+|           )                                                                   |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - None                                                                     |
++-------------------------------------------------------------------------------+
+|生データをUART（COMポート）に出力する                                          |
++-------------------------------------------------------------------------------+
+
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::raw_read(  )                                                       |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - _ser.readline().strip()                                                  |
++-------------------------------------------------------------------------------+
+|UARTポートから生データを受け取る                                               |
++-------------------------------------------------------------------------------+
+
 
 ## I^2^Cバス操作API
-```python
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::start(   )                                                         |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - None                                                                     |
++-------------------------------------------------------------------------------+
+|現在のI^2^Cポートにスタートコンディションを発行する                            |
++-------------------------------------------------------------------------------+
+
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::stop(   )                                                          |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - None                                                                     |
++-------------------------------------------------------------------------------+
+|現在のI^2^Cポートにストップコンディションを発行する                            |
++-------------------------------------------------------------------------------+
+
+<!-- ```python
 # 廃止するかも
-start(self)
-stop(self)
+start()
+stop()
 ```
-***
-```python
-read(address, length = 1)
-rite(address, data = 0)
-write_and_read(address, wdata = 0, rlength = 1)
-```
+*** -->
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::read( int address,                                                 |
+|      int length = 1                                                           |
+|      )                                                                        |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - str raw_read()                                                           |
++-------------------------------------------------------------------------------+
+|                                                                               |
++-------------------------------------------------------------------------------+
+
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::write( int address,                                                |
+|       int data = 0                                                            |
+|       )                                                                       |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - str raw_read()                                                           |
++-------------------------------------------------------------------------------+
+|                                                                               |
++-------------------------------------------------------------------------------+
+
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::write_and_read(  int address,                                      |
+|                 int wdata = 0,                                                |
+|                 int rlength = 1                                               |
+|                 )                                                             |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - str raw_read()                                                           |
++-------------------------------------------------------------------------------+
+|                                                                               |
++-------------------------------------------------------------------------------+
 
 ### `'C'` 0x43 change channel
-```python
-setChannel(channel = 0)
-```
-## SPIバス操作コマンド
-```python
-write_and_read_SPI(wlength = 1, rlength = 0, data = 0xC4FEE0CA):
-```
-## 内部レジスタ操作コマンド
-```python
 
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::setChannel( int channel = 0                                        |
+|            )                                                                  |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - str raw_read()                                                           |
++-------------------------------------------------------------------------------+
+|                                                                               |
++-------------------------------------------------------------------------------+
+
+## SPIバス操作コマンド
+
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::write_and_read_SPI( int wlength = 1,                               |
+|                    int rlength = 0,                                           |
+|                    int data = 0xC4FEE0CA                                      |
+|                    )                                                          |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - str raw_read()                                                           |
++-------------------------------------------------------------------------------+
+|                                                                               |
++-------------------------------------------------------------------------------+
+
+## 内部レジスタ操作コマンド
+
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::reg_read( str registers = "012"                                    |
+|          )                                                                    |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - str raw_read()                                                           |
++-------------------------------------------------------------------------------+
+|                                                                               |
++-------------------------------------------------------------------------------+
+
++-------------------------------------------------------------------------------+
+|```python                                                                      |
+|serial2i2c::reg_write(  list[ [str, int], ] pair = [ ['1', 0xFF],]             |
+|            )                                                                  |
+|```                                                                            |
+|                                                                               |
+|- **return**                                                                   |
+|    - str raw_read()                                                           |
++-------------------------------------------------------------------------------+
+|                                                                               |
++-------------------------------------------------------------------------------+
+
+<!-- ```python
 ##@brief RS232C to I2C converter using \e mbed
 #@code register dump
 #    dev = serial2i2c(port = 'com8', baud = '115200')
@@ -265,4 +397,4 @@ class serial2i2c(object):
 
 if __name__=="__main__":
     print "please try test.py"
-```
+``` -->
