[ DOC ] fix API descriptions
section 1:
- fix description for SPI function
section 2:
- making better look of tables
python - reg_write():
- fix default argument to use touple

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -32,7 +32,7 @@ configurable pull-up/pull-down modes. -->
   またはmbedコントローラでホストのPCにつなぎます。PCからはただのUSBシリアルポートに見えます。
     - 最大115200ボーのUART通信をサポート
 - 最大４チャネルの I^2^Cポートを持ち、それぞれのクロックスピードを独立に変更できます。
-- ８または１６ビット長のSPIポートをひとつ持ち、クロックスピードを変更できます。
+- SPIポートをひとつ持ち、ワード長とクロックスピードを変更できます。
 - 最大２つの８ビット汎用IOポート
 <!-- - tinyI2C       <-- root
     - gui       <-- PyQt4 based GUI source codes
